apps/edge-services/nginx/manifests/nginx-external.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-external
  namespace: edge-services
  labels:
    external-dns.edgard.org/scope: external
    hajimari.edgard.org/enabled: "true"
    hajimari.edgard.org/icon: web
spec:
  parentRefs:
    - name: external
      namespace: platform-system
      sectionName: https
    - name: external
      namespace: platform-system
      sectionName: https-root
  hostnames:
    - www.edgard.org
    - edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
