apps/edge-services/nginx/manifests/nginx-root-redirect.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-root-redirect
  namespace: edge-services
  labels:
    external-dns.edgard.org/scope: external
spec:
  parentRefs:
    - name: envoy-gateway-external
      namespace: platform-system
      sectionName: https-root
  hostnames:
    - edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: www.edgard.org
            statusCode: 301
